adding mode to store and some styling changes

--- a/src/styles/Toast.css
+++ b/src/styles/Toast.css
@@ -7,14 +7,27 @@
 .successToast {
     background-color: green;
     color: white;
+    animation: AnimateToast 5s ease-in forwards;
 }
 
 .failureToast {
     background-color: red;
     color: white;
+    animation: AnimateToast 5s ease-in forwards;
 }
 
 .loadingToast {
     background-color: lightblue;
     color: white;
+    animation: AnimateToast 5s ease-in forwards;
+}
+
+@keyframes AnimateToast {
+    0% {
+        visibility: visible;
+    }
+
+    100% {
+        visibility: hidden;
+    }
 }
